# nwave-copilot

./: .gitignore  README.md  nwave_copilot-0.1.0-py3-none-any.whl  pyproject.toml
.github/plugin/: marketplace.json
.github/scripts/: update_version.py
.github/workflows/: publish-plugin.yml
des/: __init__.py
des/adapters/: __init__.py
des/application/: __init__.py  boundary_rules_generator.py  boundary_rules_template.py  config_loader.py  orchestrator.py  post_tool_use_service.py  pre_tool_use_service.py  prompt_validator.py  recovery_guidance_handler.py  schema_rollback_handler.py  stale_execution_detector.py  stale_resolver.py  subagent_stop_service.py  tdd_template_loader.py  validator.py
des/cli/: log_phase.py  roadmap.py  verify_deliver_integrity.py
des/config/: des_defaults.yaml
des/domain/: __init__.py  abandoned_phase_detector.py  audit_log_path_resolver.py  deliver_integrity_verifier.py  des_enforcement_policy.py  des_marker_generator.py  des_marker_parser.py  invocation_limits_validator.py  log_integrity_validator.py  marker_completeness_policy.py  max_turns_policy.py  phase_event.py  phase_state_validator.py  prompt_metadata_extractor.py  result.py  roadmap_schema.py  roadmap_validator.py  schema_version_detector.py  session_guard_policy.py  silent_completion_detector.py  specifications.py  stale_detection_result.py  stale_execution.py  step_completion_validator.py  step_file_repository.py  tdd_schema.py  timeout_instruction_template.py  timeout_monitor.py  timeout_warning_builder.py  turn_config.py  turn_counter.py  validation_error_detector.py  value_objects.py
des/ports/: __init__.py
nWave/agents/: nw-acceptance-designer-reviewer.md  nw-acceptance-designer.md  nw-agent-builder-reviewer.md  nw-agent-builder.md  (+18 more)
nwave_copilot/: __init__.py  _framework.py  cli.py
(+170 files in other folders)
